cambio de imagenes

--- a/index.html
+++ b/index.html
@@ -26,12 +26,48 @@
     <section>
         <h2>Sección principal</h2>
         <p>Lenguajes de programacion que manejamos</p>
-        <img src="Imagenes/python.png" alt="Python" class="imagen-pequena">
-        <img src="Imagenes/java.png" class="imagen-pequena">
-        <img src="Imagenes/c_mas.png" class="imagen-pequena">
-        <img src="Imagenes/sql.png" class="imagen-pequena">
-        <img src="Imagenes/mysql.png" class="imagen-pequena">
-        <img src="Imagenes/arduino.png" class="imagen-pequena">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+        <link rel="stylesheet" href="style_img.css">
+        <div class="container">
+            <div class="slide">
+                <div class="item" style="background-image: url('Imagenes/python.jpg');">
+                    <div class="content">
+                        <div class="name">Python</div>
+                        <div class="desc">Lorem </div>
+                        <button>See more</button>
+                    </div>
+                </div>
+                <div class="item" style="background-image: url('Imagenes/arduino.jpg');">
+                    <div class="content">
+                        <div class="name">Arduino</div>
+                        <div class="desc">Lorem </div>
+                        <button>See more</button>
+                    </div>        
+                </div>
+                <div class="item" style="background-image: url('Imagenes/java1.png');">
+                    <div class="content">
+                        <div class="name">JAVA</div>
+                        <div class="desc">Lorem </div>
+                        <button>See more</button>
+                    </div>        
+                </div>
+                <div class="item" style="background-image: url('Imagenes/mysql.jpg');">
+                    <div class="content">
+                        <div class="name">Mysql</div>
+                        <div class="desc">Lorem </div>
+                        <a href="index.html">
+                            <button>See more</button>
+                        </a>
+                    </div>        
+                </div>
+            </div>
+            <div class="button">
+                <button class="prev"><i class="fas fa-arrow-left"></i></button>
+                <button class="next"><i class="fas fa-arrow-right"></i></button>        
+            </div>
+        </div>
+        <script src="script.js"></script>
+        
 
         <p>Contenido principal de la pagina.</p>
     </section>
