--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,76 +8,106 @@
     <link rel="stylesheet" href="styles.css">
 
 </head>
-<body>
-<header>
-    <h1>Infinite soft</h1>
-    <h3>Desarrollo y mantenimiento</h3>
-    <img src="Imagenes/logo1.png" class="imagen-izquierda">
-    <nav>
-        <ul>
-            <li><a href="Pestañas/Servicios.html">Servicios</a></li>
-            <li><a href="Pestañas/Contactanos.html">Contacto</a></li>
-            <li><a href="Pestañas/Acerca.html">Acerca de</a></li>
-            <li><a href="prueba.html">prueba</a></li>
-        </ul>
-    </nav>
-</header>
 
-<main>
-    <section>
-        <h2>Sección principal</h2>
-        <p>Lenguajes de programacion que manejamos</p>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-        <link rel="stylesheet" href="style_img.css">
-        <div class="container">
-            <div class="slide">
-                <div class="item" style="background-image: url('Imagenes/python.jpg');">
-                    <div class="content">
-                        <div class="name">Python</div>
-                        <div class="desc">Lorem </div>
-                        <button>See more</button>
+<body>
+    <header>
+        <h1>Infinite soft</h1>
+        <h3>Desarrollo y mantenimiento</h3>
+        <img src="Imagenes/logo1.png" class="imagen-izquierda">
+        <nav>
+            <ul>
+                <li><a href="Pestañas/Servicios.html">Servicios</a></li>
+                <li><a href="Pestañas/Contactanos.html">Contacto</a></li>
+                <li><a href="Pestañas/Acerca.html">Acerca de</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h1>¡Lo que podemos ofrecerte como Programadores Informáticos!</h1>
+
+            <h2>Diseño y Desarrollo Web</h2>
+            <p>Nos especializamos en la creación de sitios web modernos y atractivos que se adaptan a tus necesidades y
+                objetivos. Utilizamos las últimas tecnologías como HTML5, CSS3 y JavaScript para garantizar un diseño
+                responsivo y una experiencia de usuario excepcional.</p>
+
+            <h2>Desarrollo de Aplicaciones</h2>
+            <p>Desarrollamos aplicaciones web y móviles personalizadas para satisfacer tus requerimientos específicos.
+                Utilizamos frameworks populares como React, Angular o Vue.js para crear aplicaciones robustas,
+                escalables y de alto rendimiento.</p>
+
+            <h2>Base de Datos</h2>
+            <p>Ofrecemos servicios de diseño, implementación y gestión de bases de datos eficientes. Trabajamos con
+                diversas tecnologías de bases de datos, incluyendo MySQL, PostgreSQL, MongoDB y más, para garantizar un
+                almacenamiento y recuperación de datos óptimos.</p>
+
+            <h2>Integración de Sistemas</h2>
+            <p>Nos encargamos de integrar sistemas y plataformas para mejorar la eficiencia operativa de tu empresa.
+                Mediante la integración de sistemas existentes y la creación de interfaces personalizadas, optimizamos
+                procesos y facilitamos la comunicación entre diferentes aplicaciones.</p>
+
+            <h2>Seguridad Informática</h2>
+            <p>Implementamos medidas de seguridad avanzadas para proteger tus datos y sistemas contra amenazas
+                cibernéticas. Realizamos análisis de vulnerabilidades, configuración de firewalls, cifrado de datos y
+                otras prácticas de seguridad para garantizar la integridad y confidencialidad de la información.</p>
+
+            <h2>Consultoría Tecnológica</h2>
+            <p>Brindamos servicios de consultoría tecnológica para ayudarte a tomar decisiones informadas sobre
+                tecnología y estrategia digital. Nuestros expertos te asesorarán en la selección de tecnologías
+                adecuadas, la planificación de proyectos y la optimización de procesos para alcanzar tus objetivos
+                empresariales.</p>
+            
+            <h1>Lenguajes de programacion que manejamos</h1>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+            <link rel="stylesheet" href="style_img.css">
+            <div class="container">
+                <div class="slide">
+                    <div class="item" style="background-image: url('Imagenes/python.jpg');">
+                        <div class="content">
+                            <div class="name">Python</div>
+                            <div class="desc">Lorem </div>
+                            <button>See more</button>
+                        </div>
+                    </div>
+                    <div class="item" style="background-image: url('Imagenes/java1.png');">
+                        <div class="content">
+                            <div class="name">JAVA</div>
+                            <div class="desc">Lorem </div>
+                            <button>See more</button>
+                        </div>
+                    </div>
+                    <div class="item" style="background-image: url('Imagenes/arduino.jpg');">
+                        <div class="content">
+                            <div class="name">Arduino</div>
+                            <div class="desc">Lorem </div>
+                            <button>See more</button>
+                        </div>
+                    </div>
+                    <div class="item" style="background-image: url('Imagenes/mysql.jpg');">
+                        <div class="content">
+                            <div class="name">Mysql</div>
+                            <div class="desc">Lorem </div>
+                            <a href="index.html">
+                                <button>See more</button>
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <div class="item" style="background-image: url('Imagenes/arduino.jpg');">
-                    <div class="content">
-                        <div class="name">Arduino</div>
-                        <div class="desc">Lorem </div>
-                        <button>See more</button>
-                    </div>        
-                </div>
-                <div class="item" style="background-image: url('Imagenes/java1.png');">
-                    <div class="content">
-                        <div class="name">JAVA</div>
-                        <div class="desc">Lorem </div>
-                        <button>See more</button>
-                    </div>        
-                </div>
-                <div class="item" style="background-image: url('Imagenes/mysql.jpg');">
-                    <div class="content">
-                        <div class="name">Mysql</div>
-                        <div class="desc">Lorem </div>
-                        <a href="index.html">
-                            <button>See more</button>
-                        </a>
-                    </div>        
+                <div class="button">
+                    <button class="prev"><i class="fas fa-arrow-left"></i></button>
+                    <button class="next"><i class="fas fa-arrow-right"></i></button>
                 </div>
             </div>
-            <div class="button">
-                <button class="prev"><i class="fas fa-arrow-left"></i></button>
-                <button class="next"><i class="fas fa-arrow-right"></i></button>        
-            </div>
-        </div>
-        <script src="script.js"></script>
-        
+            <script src="script.js"></script>
+        </section>
+    </main>
 
-        <p>Contenido principal de la pagina.</p>
-    </section>
-</main>
-
-<footer>
-    <p>infinite.soft.iv@gmail.com</p>
-    <p>Derechos de autor &copy; 2024 Infinite soft</p>
-</footer>
+    <footer>
+        <p>infinite.soft.iv@gmail.com</p>
+        <p>Derechos de autor &copy; 2024 Infinite soft</p>
+    </footer>
 
 </body>
+
 </html>
