arreglo de margenes

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
             </div>
             <script src="script.js"></script>
         </section>
+        
+        <section>
+            <h1>Programas</h1>
+            <p>aqui subiremos los programas que hallamos hecho o los links a la segunda pagina</p>
+        </section>
     </main>
 
     <footer>
