--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <button>See more</button>
                         </div>
                     </div>
-                    <div class="item" style="background-image: url('Imagenes/java1.png');">
+                    <div class="item" style="background-image: url('Imagenes/java\ 1.png');">
                         <div class="content">
                             <div class="name">JAVA</div>
                             <div class="desc">Lorem </div>
@@ -87,6 +87,15 @@
                     <div class="item" style="background-image: url('Imagenes/mysql.jpg');">
                         <div class="content">
                             <div class="name">Mysql</div>
+                            <div class="desc">Lorem </div>
+                            <a href="index.html">
+                                <button>See more</button>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="item" style="background-image: url('Imagenes/cmas.jpg');">
+                        <div class="content">
+                            <div class="name">C++</div>
                             <div class="desc">Lorem </div>
                             <a href="index.html">
                                 <button>See more</button>
