--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 tecnología y estrategia digital. Nuestros expertos te asesorarán en la selección de tecnologías
                 adecuadas, la planificación de proyectos y la optimización de procesos para alcanzar tus objetivos
                 empresariales.</p>
-            
+            <!--El carrusel de imagenes -->
             <h1>Lenguajes de programacion que manejamos</h1>
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
             <link rel="stylesheet" href="style_img.css">
