--- a/Pestañas/Servicios.html
+++ b/Pestañas/Servicios.html
@@ -46,6 +46,62 @@
         <p>Cada servicio es una promesa de calidad y atención al detalle, orientados siempre a la satisfacción del cliente y a la búsqueda de la excelencia tecnológica.</p>
     </section>
 </main>
+<main>
+    <section>
+        <h1>Instalacion de camaras</h1>
+        <h1>Lenguajes de programacion que manejamos</h1>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+            <link rel="stylesheet" href="../style_img.css">
+            <div class="container">
+                <div class="slide">
+                    <div class="item" style="background-image: url('../Imagenes/python.jpg');">
+                        <div class="content">
+                            <div class="name">Python</div>
+                            <div class="desc">Lorem </div>
+                            <button>See more</button>
+                        </div>
+                    </div>
+                    <div class="item" style="background-image: url('../Imagenes/java\ 1.png');">
+                        <div class="content">
+                            <div class="name">JAVA</div>
+                            <div class="desc">Lorem </div>
+                            <button>See more</button>
+                        </div>
+                    </div>
+                    <div class="item" style="background-image: url('../Imagenes/arduino.jpg');">
+                        <div class="content">
+                            <div class="name">Arduino</div>
+                            <div class="desc">Lorem </div>
+                            <button>See more</button>
+                        </div>
+                    </div>
+                    <div class="item" style="background-image: url('../Imagenes/mysql.jpg');">
+                        <div class="content">
+                            <div class="name">Mysql</div>
+                            <div class="desc">Lorem </div>
+                            <a href="index.html">
+                                <button>See more</button>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="item" style="background-image: url('../Imagenes/cmas.jpg');">
+                        <div class="content">
+                            <div class="name">C++</div>
+                            <div class="desc">Lorem </div>
+                            <a href="index.html">
+                                <button>See more</button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="button">
+                    <button class="prev"><i class="fas fa-arrow-left"></i></button>
+                    <button class="next"><i class="fas fa-arrow-right"></i></button>
+                </div>
+            </div>
+            <script src="../script.js"></script>
+    </section>
+</main>
 
 <footer>
     <p>infinite.soft.iv@gmail.com</p>
