--- a/index.html
+++ b/index.html
@@ -67,14 +67,18 @@
                         <div class="content">
                             <div class="name">Python</div>
                             <div class="desc">Lorem </div>
-                            <button>See more</button>
+                            <a href="Info/Python.html">
+                                <button>See more</button>
+                            </a>
                         </div>
                     </div>
                     <div class="item" style="background-image: url('Imagenes/java\ 1.png');">
                         <div class="content">
                             <div class="name">JAVA</div>
                             <div class="desc">Lorem </div>
-                            <button>See more</button>
+                            <a href="Info/java.html">
+                                <button>See more</button>
+                            </a>
                         </div>
                     </div>
                     <div class="item" style="background-image: url('Imagenes/arduino.jpg');">
@@ -110,7 +114,7 @@
             </div>
             <script src="script.js"></script>
         </section>
-        
+
         <section>
             <h1>Programas</h1>
             <p>aqui subiremos los programas que hallamos hecho o los links a la segunda pagina</p>
