--- a/index.html
+++ b/index.html
@@ -97,9 +97,18 @@
                             </a>
                         </div>
                     </div>
-                    <div class="item" style="background-image: url('Imagenes/cmas.jpg');">
+                    <div class="item" style="background-image: url('Imagenes/c_mas.png');">
                         <div class="content">
                             <div class="name">C++</div>
+                            <div class="desc">Lorem </div>
+                            <a href="index.html">
+                                <button>See more</button>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="item" style="background-image: url('Imagenes/C.png');">
+                        <div class="content">
+                            <div class="name">C#</div>
                             <div class="desc">Lorem </div>
                             <a href="index.html">
                                 <button>See more</button>
