--- a/Info/Python.html
+++ b/Info/Python.html
@@ -64,10 +64,10 @@
                     aseguramos de entender tus necesidades y ofrecer soluciones que superen tus expectativas.</p>
             </section>
             <section>
-                <h1>Descargar Archivo Demo</h1>
+                <h1>link de descarga</h1>
 
-                <li>proyecto 1 <a href=""><a href="../Proyectos de arduino/BT_Hum_Tem/BT_HUM_TEM/BT_HUM_TEM.ino"
-                            download>Descargar sobre humedad</a></a></li>
+                <!-- <li>Humerdad <a href=""><a href="../Proyectos de arduino/BT_Hum_Tem/BT_HUM_TEM/BT_HUM_TEM.ino"
+                            download>Descargar sobre humedad</a></a></li> -->
 
             </section>
     </main>
