--- a/Info/java.html
+++ b/Info/java.html
@@ -25,11 +25,11 @@
         <section>
             <h1>Todo sobre Java</h1>
             <p>Historia de Java: Java fue creado por James Gosling y Patrick Naughton, empleados de Sun Microsystems,
-                con el apoyo de Bill Joy, cofundador de Sun Microsystems1. El lenguaje Java fue presentado oficialmente
+                con el apoyo de Bill Joy, cofundador de Sun Microsystems. El lenguaje Java fue presentado oficialmente
                 por Sun en SunWorld el 23 de mayo de 19951. En 2009, la empresa Oracle compró la empresa Sun, lo que
-                explica por qué el lenguaje ahora pertenece a Oracle1. Aunque sigue siendo muy popular, ha habido un
+                explica por qué el lenguaje ahora pertenece a Oracle. Aunque sigue siendo muy popular, ha habido un
                 declive gradual en el uso de Java en los últimos años con otros lenguajes que utilizan JVM ganando
-                popularidad2.
+                popularidad.
             </p>
             <p>
                 Habilidades de Java: Aquí están algunas habilidades importantes que los desarrolladores de Java deben
@@ -37,13 +37,13 @@
             </p>
             <p>
                 Entendimiento del Ecosistema de Java: El ecosistema de Java es una plataforma de software que contiene
-                una colección de recursos y otros elementos esenciales para la creación de varias aplicaciones3.
+                una colección de recursos y otros elementos esenciales para la creación de varias aplicaciones.
                 Conceptos de Programación Orientada a Objetos (OOP): Java es un lenguaje de programación orientado a
-                objetos, lo que significa que utiliza el objeto como entidad principal y realiza varias actividades3.
+                objetos, lo que significa que utiliza el objeto como entidad principal y realiza varias actividades.
                 Patrones de Diseño: Los patrones de diseño son planos de codificación que ayudan a superar problemas en
-                un módulo de desarrollo de software4.
+                un módulo de desarrollo de software.
                 Clases Abstractas: La abstracción se utiliza en OOP para simplificar la codificación. Los
-                desarrolladores también utilizan una interfaz Java para codificación avanzada4.
+                desarrolladores también utilizan una interfaz Java para codificación avanzada.
             </p>
             <img src="../Imagenes/java.png" alt="">
             <!--Listado de los proyectos para subir-->
