--- a/Info/Python.html
+++ b/Info/Python.html
@@ -16,8 +16,9 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="Pestañas/Contactanos.html">Contacto</a></li>
-                <li><a href="Pestañas/Acerca.html">Acerca de</a></li>
+                <li><a href="../Pestañas/Servicios.html">Servicios</a></li>
+                <li><a href="../Pestañas/Contactanos.html">Contacto</a></li>
+                <li><a href="../Pestañas/Acerca.html">Acerca de</a></li>
             </ul>
         </nav>
     </header>
@@ -65,7 +66,7 @@
             </section>
             <section>
                 <h1>link de descarga</h1>
-
+                 <!-- Poner los links de los proyectos con el comando URL -->
                 <!-- <li>Humerdad <a href=""><a href="../Proyectos de arduino/BT_Hum_Tem/BT_HUM_TEM/BT_HUM_TEM.ino"
                             download>Descargar sobre humedad</a></a></li> -->
 
