--- a/Info/c.html
+++ b/Info/c.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arduino</title>
+    <title>C#</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
 
@@ -24,11 +24,11 @@
     </header>
     <main>
         <section>
-            <h1>Todo sobre Arduino</h1>
-            <img src="../Imagenes/arduino.png" alt="">
+            <h1>Todo sobre C#</h1>
+            <img src="../Imagenes/C.png" alt="">
             <!--Listado de los proyectos para subir-->
-            <section id="servicios-Arduino">
-                <h2>Servicios de Programación en Arduino</h2>
+            <section id="servicios-C#">
+                <h2>Servicios de Programación en C#</h2>
 
 
                 <h3>¿Qué podemos hacer por ti?</h3>
