--- a/Info/java.html
+++ b/Info/java.html
@@ -70,10 +70,10 @@
                 </ul>
             </section>
             <section>
-                <h1>Descargar Archivo Demo</h1>
-
-                <li>proyecto 1 <a href=""><a href="../Proyectos de arduino/BT_Hum_Tem/BT_HUM_TEM/BT_HUM_TEM.ino"
-                            download>Descargar sobre humedad</a></a></li>
+                <h1>link de descarga</h1>
+                <!-- Poner los links de los proyectos con el comando URL -->
+                <!-- <li>Humerdad <a href=""><a href="../Proyectos de arduino/BT_Hum_Tem/BT_HUM_TEM/BT_HUM_TEM.ino"
+                            download>Descargar sobre humedad</a></a></li> -->
 
             </section>
     </main>
