--- a/index.html
+++ b/index.html
@@ -66,52 +66,63 @@
                     <div class="item" style="background-image: url('Imagenes/python.jpg');">
                         <div class="content">
                             <div class="name">Python</div>
-                            <div class="desc">Lorem </div>
+                            <div class="desc">Mas información </div>
                             <a href="Info/Python.html">
-                                <button>See more</button>
+                                <button>Aquí</button>
                             </a>
                         </div>
                     </div>
                     <div class="item" style="background-image: url('Imagenes/java\ 1.png');">
                         <div class="content">
-                            <div class="name">JAVA</div>
-                            <div class="desc">Lorem </div>
+                            <div class="name">Java</div>
+                            <div class="desc">Mas información</div>
                             <a href="Info/java.html">
-                                <button>See more</button>
+                                <button>Aquí</button>
                             </a>
                         </div>
                     </div>
                     <div class="item" style="background-image: url('Imagenes/arduino.jpg');">
                         <div class="content">
                             <div class="name">Arduino</div>
-                            <div class="desc">Lorem </div>
-                            <button>See more</button>
+                            <div class="desc">Mas información </div>
+                            <a href="Info/Arduino.html">
+                                <button>Aquí</button>
+                            </a>
                         </div>
                     </div>
                     <div class="item" style="background-image: url('Imagenes/mysql.jpg');">
                         <div class="content">
                             <div class="name">Mysql</div>
-                            <div class="desc">Lorem </div>
-                            <a href="index.html">
-                                <button>See more</button>
+                            <div class="desc">Mas información </div>
+                            <a href="Info/mysql.html">
+                                <button>Aquí</button>
                             </a>
                         </div>
                     </div>
                     <div class="item" style="background-image: url('Imagenes/c_mas.png');">
                         <div class="content">
                             <div class="name">C++</div>
-                            <div class="desc">Lorem </div>
-                            <a href="index.html">
-                                <button>See more</button>
+                            <div class="desc">Mas información </div>
+                            <a href="Info/cmas.html">
+                                <button>Aquí</button>
                             </a>
                         </div>
                     </div>
-                    <div class="item" style="background-image: url('Imagenes/C.png');">
+                    <div class="item" style="background-image: url('Imagenes/c.jpg');">
                         <div class="content">
                             <div class="name">C#</div>
-                            <div class="desc">Lorem </div>
-                            <a href="index.html">
-                                <button>See more</button>
+                            <div class="desc">Mas información </div>
+                            <a href="Info/c.html">
+                                <button>Aquí</button>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="item" style="background-image: url('Imagenes/sql.jpg');">
+                        <div class="content">
+                            <div class="name">SQL</div>
+                            <div class="desc">Mas información </div>
+                            <a href="Info/sql.html">
+                                <button>Aquí</button>
                             </a>
                         </div>
                     </div>
@@ -123,18 +134,12 @@
             </div>
             <script src="script.js"></script>
         </section>
-
-        <section>
-            <h1>Programas</h1>
-            <p>aqui subiremos los programas que hallamos hecho o los links a la segunda pagina</p>
-        </section>
     </main>
 
     <footer>
         <p>infinite.soft.iv@gmail.com</p>
         <p>Derechos de autor &copy; 2024 Infinite soft</p>
     </footer>
-
 </body>
 
 </html>
