--- a/Pestañas/Servicios.html
+++ b/Pestañas/Servicios.html
@@ -47,7 +47,7 @@
     </section>
 </main>
 <main>
-    <section>
+    <!-- <section>
         <h1>Instalacion de camaras</h1>
         <h1>Lenguajes de programacion que manejamos</h1>
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <script src="../script.js"></script>
-    </section>
+    </section> -->
 </main>
 
 <footer>
